Fix round 1: dangling $EntityContainer, vacuous alias test, cross-container $EntitySet
Addresses three Important findings from review of a0e390358:

- $EntityContainer could name a container absent from the served document
  (Edm#getEntityContainer() resolves the provider's declared default
  independently of which schema's container is actually serialized).
  Added documentEntityContainerName(), which names the first schema-owned
  container found while walking the EDM's schemas, falling back to
  Edm#getEntityContainer() only when no schema declares one.
- The alias-prohibition test for $EntityContainer was vacuous: the fixture's
  default-container namespace had no alias entry, so an alias-resolving
  implementation would have passed unnoticed. Made the fixture
  self-consistent and the negative assertion load-bearing.
- Action/function import $EntitySet always wrote the bare entity-set name,
  even when the returned entity set lives in a different container than the
  one importing it. Sections 13.5/13.6 require a container-qualified path
  in that case. Added entitySetReferenceValue(), mirroring the XML action
  import serializer's container-FQN-qualified-path branch (containers
  compared via getEntityContainer(), joined with "/" per the CSDL
  target-path syntax). Added a cross-container fixture case to pin it.